2003-02-17  Ulrich Drepper  <drepper@redhat.com>

	* tst-cancel1.c (tf): Block all signals.

	* Makefile (tests): Add tst-basic6.
	* tst-basic6.c: New file.

	* tst-basic1.c: Add test for process ID.

	* Makefile (tests): Add tst-cancel10.
	* tst-cancel10.c: New file.

	* Makefile (tests): Add tst-signal4.
	* tst-signal4.c: New file.

	* sysdeps/pthread/pthread_sigmask.c (pthread_sigmask): Use
	__sigismember instead of sigismember.  Add __builtin_expect.

2003-02-16  Ulrich Drepper  <drepper@redhat.com>

	* tst-attr1.c (do_test): Add tests for pthread_setcanceltype,
	pthread_setcancelstate, and pthread_rwlock_setpshared.

	* tst-cancel7.c (do_test): Make sure the pid file exists before
	canceling the thread.

	* tst-rwlock6.c: More pthread_rwlock_timedwrlock and
	pthread_rwlock_timedrdlock tests.
	* tst-rwlock7.c: More pthread_rwlock_timedwrlock tests.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_timedrdlock.S:
	Check for invalid tv_nsec field.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_timedwrlock.S:
	Likewise.

	* pthread_mutex_trylock.c (__pthread_mutex_trylock): Protect
	recursive mutex of overflow.

	* tst-attr1.c (do_test): Add test for pthread_mutexattr_setpshared.

	* libc-cancellation.c (__libc_enable_asynccancel): Rewrite to avoid
	going into an endless loop.
	* Makefile (tests): Add tst-cancel9.
	* tst-cancel9.c: New file.

	* pthread_cancel.c (pthread_cancel): Use the result of __pthread_kill.

2003-02-15  Ulrich Drepper  <drepper@redhat.com>

	* tst-mutex5.c (do_test): Add more timedlock tests.

	* tst-mutex2.c: Tests of trylock and unlock with ERROR mutexes.
	* tst-mutex3.c (do_test): Add tests for trylock with RECURSIVE mutexes.

	* sysdeps/unix/sysv/linux/pthread_kill.c (__pthread_kill): Don't
	use INLINE_SYSCALL.  Error number is returned, not -1.

	* pthreadP.h: Mark declarations of __find_in_stack_list, __free_tcb,
	and __deallocate_stack with internal_function.
	* pthread_create.c: Adjust definitions appropriately.