@@ -1,5 +1,8 @@
 2003-02-17  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/unix/sysv/linux/bits/local_lim.h: Define TTY_NAME_MAX
+	and LOGIN_NAME_MAX.
+
 	* tst-cancel1.c (tf): Block all signals.
 
 	* Makefile (tests): Add tst-basic6.
